# opentcg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  app.hpp  opentcg.hpp
include/game/: CMakeLists.txt  card.hpp  deck.hpp  tcg.hpp
include/gui/: CMakeLists.txt  card_display.hpp  card_search.hpp  card_view.hpp  deck_editor.hpp  main_window.hpp
include/util/: CMakeLists.txt  image_manager.hpp  xml.hpp
python/: game.py  xml2sql.py  xmltosql.py  xmlutil.py
src/: CMakeLists.txt  app.cpp  example.xml  main.cpp  main_window.glade
src/game/: CMakeLists.txt  card.cpp  deck.cpp  tcg.cpp
src/gui/: CMakeLists.txt  card_display.cpp  card_search.cpp  card_view.cpp  deck_editor.cpp  main_window.cpp
src/util/: CMakeLists.txt  image_manager.cpp  xml.cpp
